2011-01-25  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [GTK] Two tests crash after r76555
        https://bugs.webkit.org/show_bug.cgi?id=53057

        * platform/gtk/Skipped: Unskip tests which are no longer crashing.
2011-01-25  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [GTK] Two tests crash after r76555
        https://bugs.webkit.org/show_bug.cgi?id=53057

        Instead of creating synchronous ResourceHandles manually, use the ::create factory.
        This ensures that ::start() is not called when there is a scheduled failure and also
        reduces code duplication.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::ResourceHandle::loadResourceSynchronously): Use the ::create factory method.

Canonical link: https://commits.webkit.org/67435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77343 268f45cc-cd09-0410-ab3c-d52691b4dbfc